Fixed the algorithm for getting the alpha

--- a/test/cases/bifs.transparentify.css
+++ b/test/cases/bifs.transparentify.css
@@ -23,7 +23,7 @@
   color: rgba(87,0,55,0.77);
 }
 .test9 {
-  color: rgba(0,255,81,0.38);
+  color: rgba(14,255,80,0.43);
 }
 .test10 {
   color: rgba(47,229,79,0.5);
@@ -33,4 +33,7 @@
 }
 .test12 {
   color: rgba(183,183,183,0.7);
+}
+.test13 {
+  color: rgba(145,0,129,0.67);
 }
