Parse error in latest version. Fixes #1581

--- a/test/cases/parse.styl
+++ b/test/cases/parse.styl
@@ -38,3 +38,8 @@ body { color: red;   width:  100px }
 body {color:#666}
     a:hover {color:#333}
 
+h1
+  font-family 'Economica', sans-serif
+
+a:hover
+  color black
