Fixed parse error when `{` is on a new line in at-rules

--- a/test/cases/parse.css
+++ b/test/cases/parse.css
@@ -30,3 +30,40 @@ h1 {
 a:hover {
   color: #000;
 }
+@media screen {
+  body {
+    color: #f00;
+  }
+}
+@-moz-keyframes foo {
+  from {
+    color: #f00;
+  }
+  to {
+    color: #00f;
+  }
+}
+@-webkit-keyframes foo {
+  from {
+    color: #f00;
+  }
+  to {
+    color: #00f;
+  }
+}
+@-o-keyframes foo {
+  from {
+    color: #f00;
+  }
+  to {
+    color: #00f;
+  }
+}
+@keyframes foo {
+  from {
+    color: #f00;
+  }
+  to {
+    color: #00f;
+  }
+}
