--- a/test/cases/parse.styl
+++ b/test/cases/parse.styl
@@ -43,3 +43,23 @@ h1
 
 a:hover
   color black
+
+@media screen
+{
+  body
+  {
+    color: red;
+  }
+}
+
+@keyframes foo
+{
+  from
+  {
+    color: red;
+  }
+  to
+  {
+    color: blue;
+  }
+}
