--- a/test/cases/keyframes.styl
+++ b/test/cases/keyframes.styl
@@ -57,3 +57,17 @@ for i in 1..3
       color: blue
     100%
       color: green
+
+vendors = official
+@keyframes foo
+{
+  0%
+  {
+    color: red;
+  }
+
+  100%
+  {
+    color: blue;
+  }
+}
