--- a/test/cases/media.complex.css
+++ b/test/cases/media.complex.css
@@ -129,3 +129,8 @@
     width: 650px;
   }
 }
+@media only screen and (min-width: 800px) and (-webkit-min-device-pixel-ratio: 1.3), only screen and (min-width: 800px) and (-o-min-device-pixel-ratio: 13/10), only screen and (min-width: 800px) and (min-resolution: 120dpi), only screen and (min-width: 800px) and (min-resolution: 1.3dppx) {
+  body {
+    color: #f00;
+  }
+}
