--- a/test/cases/media.complex.styl
+++ b/test/cases/media.complex.styl
@@ -147,3 +147,9 @@ body
   .sidebar, .header, .footer
     @media (orientation: landscape)
       width: 650px;
+
+@media only screen
+  @media (min-width: 800px)
+    @media (-webkit-min-device-pixel-ratio: 1.3), (-o-min-device-pixel-ratio: 13/10), (min-resolution: 120dpi), (min-resolution: 1.3dppx)
+      body
+        color: red
