Comma first, multiline is broken. Fixes #1622

--- a/test/cases/multiline.styl
+++ b/test/cases/multiline.styl
@@ -14,6 +14,12 @@
                             0%
                           ), 
 
+    inset 0 1px 0         hsl(
+                            219
+                          , 20%
+                          , 0%
+                          ),
+
     inset 0 -50px 50px -40px hsla(220, 80%, 10%, .3),
 
     inset 0 -1px 0px      hsl(220, 20%, 20%),
