Fixed hsla for different color functions

--- a/test/cases/bifs.blend.styl
+++ b/test/cases/bifs.blend.styl
@@ -8,3 +8,7 @@
   color: blend(rgba(red, 0), lime)
   color: blend(lime, red)
   color: blend(rgba(lime, 0.5), rgba(red, 0.25))
+
+.test_hsla
+  color: blend(rgba(lime,.3), hsl(200,0%,0%))
+  color: blend(hsla(100,50%,50%,0.5), hsla(200,0%,0%,1))
