--- a/test/cases/bifs.transparentify.styl
+++ b/test/cases/bifs.transparentify.styl
@@ -36,3 +36,6 @@
 
 .test13
   color: transparentify(#AE1268, #E93636)
+
+.test14
+  color: transparentify(hsla(200,40%,40%,.3), hsla(200,0%,100%,1))
