--- a/test/cases/bifs.contrast.styl
+++ b/test/cases/bifs.contrast.styl
@@ -5,3 +5,4 @@
   test4: contrast(#000, rgba(#FFF, 0.5)).ratio
   test4_min: contrast(#000, rgba(#FFF, 0.5)).min
   test4_max: contrast(#000, rgba(#FFF, 0.5)).max
+  test5: contrast(hsla(200,50%,50%,1), hsla(200,0%,00%,1)).ratio
