--- a/test/cases/bifs.luminosity.styl
+++ b/test/cases/bifs.luminosity.styl
@@ -2,3 +2,5 @@
   test1: luminosity(white)
   test2: luminosity(#000)
   test3: luminosity(red)
+  test4: luminosity(hsla(200,0%,0%,1))
+  test5: luminosity(hsl(200,0%,50%))
