--- a/test/cases/media.complex.styl
+++ b/test/cases/media.complex.styl
@@ -153,3 +153,10 @@ body
     @media (-webkit-min-device-pixel-ratio: 1.3), (-o-min-device-pixel-ratio: 13/10), (min-resolution: 120dpi), (min-resolution: 1.3dppx)
       body
         color: red
+
+@media screen
+  foo()
+    body
+      color: red
+
+  foo()
