--- a/test/cases/comments.styl
+++ b/test/cases/comments.styl
@@ -30,3 +30,9 @@ body
 .popup
   -webkit-box-shadow: 1px 0 0 white, /* TODO */ 2px 0 0 black
   -moz-box-shadow: 1px 0 0 white /* TODO */ 2px 0 0 black
+
+.foo
+  color: red; /* inline */
+  width: 100px;
+  /* foo */
+  height: 300px;
