Single-line comment bug when apostophe and colon are present. Closes #1647

--- a/test/cases/comments.styl
+++ b/test/cases/comments.styl
@@ -36,3 +36,8 @@ body
   width: 100px;
   /* foo */
   height: 300px;
+
+// comment with ', ", // and :
+@media only screen and (max-width: 1230px)
+  .test
+    foo: bar
