Add `rebeccapurple` named color

--- a/test/cases/colors.styl
+++ b/test/cases/colors.styl
@@ -146,3 +146,4 @@ body
   color-whitesmoke: whitesmoke
   color-yellow: yellow
   color-yellowgreen: yellowgreen
+  color-rebeccapurple: rebeccapurple
