--- a/test/cases/media.complex.styl
+++ b/test/cases/media.complex.styl
@@ -160,3 +160,12 @@ body
       color: red
 
   foo()
+
+bluefy()
+  @media (height 100px)
+    color blue
+
+@media (width 100px)
+  .x
+    color red
+    bluefy()
