--- a/test/cases/extend.with.placeholders.css
+++ b/test/cases/extend.with.placeholders.css
@@ -45,3 +45,10 @@ a.error:hover {
 .boo {
   background: #f00;
 }
+#thing .blurg {
+  display: none;
+}
+#thing .blurg,
+#thing .goomba {
+  visibility: hidden;
+}
