--- a/test/cases/extend.with.placeholders.styl
+++ b/test/cases/extend.with.placeholders.styl
@@ -75,3 +75,20 @@ for i in 1..3
 .boo
   background: red
   @extend $hide_at_640
+
+$test-thing
+  display none
+
+$test-thang
+  visibility hidden
+
+#thing
+  .blurg
+    @extends $test-thing
+
+@media only screen
+  #thing
+    .blurg
+      @extends $test-thang
+  #thing .goomba
+    @extends $test-thang
