Fixed bug with cloning of an interpolated selector with comma. Closes #1660

--- a/test/cases/media.complex.css
+++ b/test/cases/media.complex.css
@@ -154,3 +154,13 @@
     color: #f00;
   }
 }
+ul.left li a:link,
+ul.left li a:visited {
+  color: #00f;
+}
+@media only screen and (max-width: 699px) {
+  ul.left li a:link,
+  ul.left li a:visited {
+    border-right: 0;
+  }
+}
