Escape \, in hash bug. Fixes #1666

--- a/test/cases/object.mixin.styl
+++ b/test/cases/object.mixin.styl
@@ -92,3 +92,11 @@ foo = {
 .test
   {foo}
   baz: foo.padding
+
+button = {
+  width: 400px,
+  box-shadow: 1px 1px 1px #000 \, 1px 1px 1px #0c0
+}
+
+.button
+  {button}
