--- a/test/cases/object.mixin.css
+++ b/test/cases/object.mixin.css
@@ -49,3 +49,7 @@ html.touch nav ul li.active {
   padding: 10px 20px 30px;
   baz: 10px 20px 30px;
 }
+.button {
+  width: 400px;
+  box-shadow: 1px 1px 1px #000 , 1px 1px 1px #0c0;
+}
