--- a/test/cases/keyframes.styl
+++ b/test/cases/keyframes.styl
@@ -58,7 +58,12 @@ for i in 1..3
     100%
       color: green
 
-vendors = official
+div
+  color: blue
+  @keyframes lol
+    from
+      color: red
+
 @keyframes foo
 {
   0%
