Fixed bug with extending nested selector inside placeholder selector. CLoses #1687

--- a/test/cases/extend.with.placeholders.styl
+++ b/test/cases/extend.with.placeholders.styl
@@ -92,3 +92,11 @@ $test-thang
       @extends $test-thang
   #thing .goomba
     @extends $test-thang
+
+$foo
+  .foo
+    padding: 0
+
+.foo,
+.bar
+  @extends $foo .foo
