--- a/test/cases/media.complex.css
+++ b/test/cases/media.complex.css
@@ -169,3 +169,16 @@ ul.left li a:visited {
     color: #f00;
   }
 }
+body {
+  background-color: #fff;
+}
+@media only screen and (min-width: 100px) {
+  body {
+    background-color: #000;
+  }
+}
+@media only screen and (min-width: 100px) and (max-width: 500px) {
+  body {
+    color: #00f;
+  }
+}
