--- a/test/cases/media.complex.styl
+++ b/test/cases/media.complex.styl
@@ -211,3 +211,9 @@ background-mix() {
 body {
   background-mix()
 }
+
+.foo
+  for j in 8..10
+    @media (min-width: (1200 / 16 * j / 10)em)
+      @media (min-height: (780 / 16 * j / 10)em)
+        font-size: (j / 10)em
