Fixed bug with `add-property` and block mixin. Closes #1734

--- a/test/cases/bifs.add-property.css
+++ b/test/cases/bifs.add-property.css
@@ -75,3 +75,11 @@ body {
   display: -ms-flex;
   display: flex;
 }
+@media print {
+  body {
+    display: block;
+    foo: -webkit-something(4px);
+    foo: -moz-something(4px);
+    foo: something(4px);
+  }
+}
