Change behavior of objects equality operator

--- a/test/cases/object.css
+++ b/test/cases/object.css
@@ -68,3 +68,11 @@ body {
   height: 40px;
   width: 500px;
 }
+body {
+  test: false;
+  test: true;
+  test: true;
+  test: true;
+  test: true;
+  test: false;
+}
