Cast idents to strings when using them as a hash keys. Closes #1735

--- a/test/cases/object.css
+++ b/test/cases/object.css
@@ -77,3 +77,11 @@ body {
   test: true;
   test: false;
 }
+body {
+  test: #673;
+  test: #669;
+  test: #668;
+  test: #667;
+  test: #666;
+  test: {"free-plan":"(#ccc)","freelancer":"(#ccc)","small-business":"(#ccc)","professional-business":"(#ccc)","enterprise":"(#ccc)"};
+}
