Don't strip unsuppressed comments inside nested blocks. Fixes #1785

--- a/test/cases/comments.css
+++ b/test/cases/comments.css
@@ -29,3 +29,11 @@ body
     foo: bar;
   }
 }
+@media (max-width: 830px) {
+  /*
+  * uncss:ignore
+  */
+  nav.open .links {
+    transform: translate(0, 0);
+  }
+}
