--- a/test/cases/comments.styl
+++ b/test/cases/comments.styl
@@ -41,3 +41,10 @@ body
 @media only screen and (max-width: 1230px)
   .test
     foo: bar
+
+@media (max-width: 830px)
+  /*!
+  * uncss:ignore
+  */
+  nav.open .links
+    transform translate(0, 0)
