Fix incorrect parsing of negative supports conditions. Closes #1815

--- a/test/cases/supports.css
+++ b/test/cases/supports.css
@@ -62,3 +62,8 @@
     color: #000;
   }
 }
+@supports ((background-blend-mode: normal) and (not (mask-type: alpha))) {
+  select {
+    padding: 9px 16px 9px 10px;
+  }
+}
