--- a/test/cases/supports.styl
+++ b/test/cases/supports.styl
@@ -64,3 +64,7 @@ body
     /* comment */
   }
 }
+
+@supports ( (background-blend-mode: normal) and ( not ( mask-type: alpha) ) )
+  select
+    padding: 9px 16px 9px 10px
