Improve legibility of code samples

--- a/s/main.styl
+++ b/s/main.styl
@@ -133,7 +133,7 @@ ul
 pre
   width width = 320px
   padding 30px
-  color color = #8D8D8D
+  color color = lighten(light-gray, 10%)
   font 12px\/1.4 monaco, monospace
   overflow-x auto
   inset()
