Link to nib's docs

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -40,7 +40,7 @@
                     {% endfor %}
                 {% endfor %}
             {% endcapture %}{{ menu_result }}
-            <li><a href="http://github.com/visionmedia/nib">CSS3 Extensions with Nib</a></li>
+            <li><a href="http://tj.github.io/nib/">CSS3 Extensions with Nib</a></li>
             <li><a href="{{ root_url }}try.html">Try Stylus Online!</a></li>
         </ul>
         <div id="ribbon"><a href="https://github.com/LearnBoost/stylus">Fork me on GitHub</a></div>
