Add "transparent" named color. Closes #1894

--- a/test/cases/colors.css
+++ b/test/cases/colors.css
@@ -139,6 +139,7 @@ body {
   color-teal: #008080;
   color-thistle: #d8bfd8;
   color-tomato: #ff6347;
+  color-transparent: transparent;
   color-turquoise: #40e0d0;
   color-violet: #ee82ee;
   color-wheat: #f5deb3;
