--- a/test/cases/colors.styl
+++ b/test/cases/colors.styl
@@ -139,6 +139,7 @@ body
   color-teal: teal
   color-thistle: thistle
   color-tomato: tomato
+  color-transparent: transparent
   color-turquoise: turquoise
   color-violet: violet
   color-wheat: wheat
