--- a/test/cases/bifs.blend.styl
+++ b/test/cases/bifs.blend.styl
@@ -7,6 +7,7 @@
 .test_simples
   color: blend(rgba(red, 0), lime)
   color: blend(lime, red)
+  color: blend(transparent, blue)
   color: blend(rgba(lime, 0.5), rgba(red, 0.25))
 
 .test_hsla
