Fixed float units convertion. Closes #1903

--- a/test/cases/bifs.convert.styl
+++ b/test/cases/bifs.convert.styl
@@ -6,3 +6,5 @@ body
   test: type(convert(foo))
   test: type(convert(bar))
   test: type(convert(baz))
+  test: 10em + convert('1.334em')
+  test: 10em + convert('-4.5em')
