Add "leave-strings" option to json bif. Closes #1885

--- a/test/cases/bifs.json.styl
+++ b/test/cases/bifs.json.styl
@@ -54,3 +54,8 @@ body
   -webkit-transition: vars.animate.special.out
   if vars.awesome
     border red
+
+icons = json('import.json/icons.json', { hash: true, leave-strings: true });
+
+.icon
+  content: icons.menu
