Save inline comments inside property values

--- a/test/cases/comments.css
+++ b/test/cases/comments.css
@@ -15,11 +15,12 @@ body
   background: url("img.png") 8px 8px no-repeat, rgba(0,0,0,0.41);
 }
 .popup {
-  -webkit-box-shadow: 1px 0 0 #fff, 2px 0 0 #000;
-  -moz-box-shadow: 1px 0 0 #fff 2px 0 0 #000;
+  -webkit-box-shadow: 1px 0 0 #fff, /* TODO */ 2px 0 0 #000;
+  -moz-box-shadow: 1px 0 0 #fff /* TODO */ 2px 0 0 #000;
 }
 .foo {
   color: #f00; /* inline */
+  background: url("img.png") /* inline */;
   width: 100px;
 /* foo */
   height: 300px;
