--- a/test/cases/bifs.json.styl
+++ b/test/cases/bifs.json.styl
@@ -59,3 +59,8 @@ icons = json('import.json/icons.json', { hash: true, leave-strings: true });
 
 .icon
   content: icons.menu
+
+optional = json('import.json/optional.json', { hash: true, optional: true })
+
+body
+  test: typeof(optional) == 'null'
