--- a/test/cases/bifs.selector.css
+++ b/test/cases/bifs.selector.css
@@ -34,6 +34,10 @@ broken selector {
   baz: 'li a';
   baz: '.foo:hover, .foo:active';
 }
+.foo .bar .baz {
+  baz: '.foo:hover';
+  baz: true;
+}
 .qux .qux {
   baz: '.qux .qux__qux';
 }
