--- a/test/cases/selector.reference.styl
+++ b/test/cases/selector.reference.styl
@@ -82,3 +82,11 @@ foo /deep/
   color: blue
   && + .bar
     color: red
+
+.a,
+.b
+  & .c
+    width: 10px
+
+    ^[0]_hover .d
+      height: 10px
