--- a/test/cases/bifs.selector.styl
+++ b/test/cases/bifs.selector.styl
@@ -64,6 +64,12 @@ foo() {
   }
 }
 
+.foo
+  & > .bar
+    ^[0] ^[1..1],
+    ^[1..1]
+      test: selector('^[1..1]')
+
 qux() {
   {selector()} {
     baz: selector('&__qux')
