Add percentage function to built in functions
The percentage function will simply turn a given number into a percent. SASS has a similay function.

--- a/lib/functions/index.styl
+++ b/lib/functions/index.styl
@@ -284,3 +284,6 @@ cache()
     /$cache_placeholder_for_{$id}
       $stylus_mixin_cache[$key] = $id
       {block}
+
+percentage(num)
+  return (num * 100) + '%'
