--- a/lib/functions/index.styl
+++ b/lib/functions/index.styl
@@ -285,5 +285,7 @@ cache()
       $stylus_mixin_cache[$key] = $id
       {block}
 
+// Percentage function to convert a number, e.g. ".45", into a percentage, e.g. "45%"
+
 percentage(num)
-  return (num * 100) + '%'
+  return unit(num * 100, '%')
