--- a/test/cases/functions.url.styl
+++ b/test/cases/functions.url.styl
@@ -1,19 +1,24 @@
 .embed-no-hash {
   color: #c00;
-  background: url("circle.svg");
+  background: embedurl("circle.svg");
 }
 
 .embed-with-hash {
   color: #c00;
-  background: url("circle.svg#some-id");
+  background: embedurl("circle.svg#some-id");
+}
+
+.embed-with-utf8 {
+  color: #c00;
+  background: embedurl("circle.svg", "utf8");
 }
 
 .too-big-no-hash {
   color: #c00;
-  background: url("tiger.svg");
+  background: embedurl("tiger.svg");
 }
 
 .too-big-with-hash {
   color: #c00;
-  background: url("tiger.svg#some-id");
+  background: embedurl("tiger.svg#some-id");
 }
