SelectorParser: Added initial reference selector

--- a/test/cases/selector.reference.styl
+++ b/test/cases/selector.reference.styl
@@ -121,3 +121,9 @@ foo /deep/
 
     ^[10] .c
       what: ever
+
+.foo
+  .bar
+    ~/
+      test: selector('~/')
+      test: selector('.baz ~/')
