--- a/test/cases/functions.url.styl
+++ b/test/cases/functions.url.styl
@@ -15,10 +15,10 @@
 
 .too-big-no-hash {
   color: #c00;
-  background: embedurl("tiger.svg");
+  background: url("tiger.svg");
 }
 
 .too-big-with-hash {
   color: #c00;
-  background: embedurl("tiger.svg#some-id");
+  background: url("tiger.svg#some-id");
 }
